--- a/act_Application/wwwroot/css/General/Transacciones/Transacciones.css
+++ b/act_Application/wwwroot/css/General/Transacciones/Transacciones.css
@@ -1,84 +1,91 @@
 ﻿body {
     font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
 .container {
-    width: 50%;
-    margin: 50px auto;
+    width: 400px;
+    margin: 20px auto;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+}
+
+.Container-Selector {
+    margin-bottom: 20px;
+    padding: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.select-opcion {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+/* Hide the other forms by default */
+.c_apor, .c_pres, .c_pcuo, .c_pmul {
+    display: none;
 }
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 8px;
 }
 
-.form-group {
-    margin-bottom: 20px;
-}
-
-input, select, button {
+input, select {
     width: 100%;
-    padding: 10px;
+    padding: 8px;
+    margin-bottom: 12px;
     box-sizing: border-box;
-    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 .input-container {
     position: relative;
 }
 
-    .input-container .dollar-sign {
-        position: absolute;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
+.dollar-sign {
+    position: absolute;
+    left: 8px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.input-file {
+    width: 100%;
+    padding: 8px;
+    box-sizing: border-box;
+}
 
 .buttons {
-    display: flex;
-    justify-content: space-between;
+    margin-top: 20px;
 }
 
 .save-button, .clear-button {
     padding: 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.save-button {
-    background-color: #4CAF50;
+    background-color: #4caf50;
     color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-right: 10px;
 }
 
 .clear-button {
-    background-color: #5bc0de;
-    color: #fff;
+    background-color: #f44336;
 }
 
-.save-button:hover {
-    background-color: #45a049;
-}
-
-.clear-button:hover {
-    background-color: #4cae4c;
-}
-
-select {
-    appearance: none;
-    padding: 10px;
-    width: 100%;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAZ0lEQVR4AWMYB3MlLopAElYh5j6AkNECJXoKEBGAG4BG8AqAKrAKxhOA5zGAyDgwM/ihXAUjBgqBiAYRgMjWIIYY4tDZ2CkIAAAAASUVORK5CYII=') no-repeat right center/15px 15px;
-}
-
-.select-opcion {
-    width: calc(100% - 30px);
-}
-
-[type="file"] {
-    width: calc(100% - 40px);
+p {
+    margin-top: 20px;
 }
