--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -62,7 +62,39 @@
                                         <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
                                     </div>
                                     break;
+                                case "CMUL":
+                                    <div class="notif-container">
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.IdActividad: Multa</p>
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
+                                        <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
+                                        <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                    </div>
+                                    break;
+                                case "AMUL":
+                                    <div class="notif-container">
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.IdActividad: Multa</p>
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
+                                        <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
+                                        <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                    </div>
+                                    break;
                                 case "CUOT":
+                                    <div class="notif-container">
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.IdActividad: Cuota</p>
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
+                                        <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
+                                        <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                    </div>
+                                    break;
+                                case "CCUO":
+                                    <div class="notif-container">
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.IdActividad: Cuota</p>
+                                        <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
+                                        <p class="notif-text">Fecha: @notificacionAdmin.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
+                                        <button class="btn-visualizar" data-notification-id="@notificacionAdmin.Notificaciones.Id">Visualizar</button>
+                                    </div>
+                                    break;
+                                case "ACUO":
                                     <div class="notif-container">
                                         <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.IdActividad: Cuota</p>
                                         <p class="notif-text">Razon: @notificacionAdmin.Notificaciones.Razon</p>
