--- a/act_Application/Views/Home/Index.cshtml
+++ b/act_Application/Views/Home/Index.cshtml
@@ -65,17 +65,7 @@
                         <td class="col-mult">
                             @if ((bool) new MultaRepository().OperacionesMultas(2, 0, IdUser))
                             {
-                                var firstModel = Model.FirstOrDefault();
-                                if (firstModel != null)
-                                {
-                                    <p class="TMultas">Total de Multas: @firstModel.MultaUser.TotalMultas</p>
-                                    <p class="MCanceladas">Multas Canceladas: @firstModel.MultaUser.TotalCancelados</p>
-                                    <p class="VMultas">Valor de Multas: @firstModel.MultaUser.MultasAcumuladas</p>
-                                }
-                                else
-                                {
-                                    <p>Por el momento no tienes Multas</p>
-                                }
+                                <p>Tienes multas activas, esta opcion esta en desarrollo.</p>
                             }
                             else
                             {
