--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -4,17 +4,16 @@
 @{
     ViewData["Title"] = "Notificaciones";
 
-    bool condicionUser = false;
     var userIdClaim = User.Claims.FirstOrDefault(c => c.Type == "Id");
-    int IdUser = -1;
+    int IdUser = -1, Bandera = 0;
     if (userIdClaim != null && int.TryParse(userIdClaim.Value, out IdUser))
-        condicionUser = (bool) new NotificacionesRepository().OperacionesNotificaciones( 2, 0, IdUser);
+        Bandera = IdUser;
     //Variables de Vista
     DateTime fechaActual = DateTime.Now;
     string fechaactual = fechaActual.ToString("yyyy-MM-dd");
     DateTime minDateP = DateTime.Now.AddDays(46);
     string minDateStrP = minDateP.ToString("dd-MMMM-yyyy");
-    var notificacionAdminList = Model.OrderByDescending(notif => notif.Notificaciones.FechaGeneracion).ToList();
+    var notificacionAdminList = Model.OrderByDescending(notifA => notifA.Notificaciones.FechaGeneracion).ToList();
 }
 <header>
     <meta charset="UTF-8">
@@ -29,13 +28,17 @@
         <h1>Notificaciones</h1>
         @if (User.HasClaim("Rol", "Administrador"))
         {
-            @if ((bool) new NotificacionesRepository().OperacionesNotificaciones( 1, 0, 0))
+            if ((bool) new NotificacionesRepository().OperacionesNotificaciones( 1, 0, 0))
             {
                 <div class="content-notif">
                     @foreach (var notificacionAdmin in notificacionAdminList)
                     {
                         @if(notificacionAdmin.Notificaciones.Visto == "NO")
                         {
+                            if(notificacionAdmin.Notificaciones.Destino == "Administrador")
+                            {
+                                
+                            }
                             switch ((string) new ObtenerTipoNotificacion().ClasificarInformacion(notificacionAdmin.Notificaciones.IdActividad))
                             {
                                 case "NUSE":
@@ -120,105 +123,23 @@
                 <p>Actualmente no Tienes Notificaciones.</p>
             }
         }
-    
-        else
+
+        else if (!User.HasClaim("Rol", "Administrador") && (User.HasClaim("Rol", "Socio") || User.HasClaim("Rol", "Referido")))
         {
-            @if (!User.HasClaim("Rol", "Administrador") && (User.HasClaim("Rol", "Socio") || User.HasClaim("Rol", "Referido")))
+            if((bool) new NotificacionesRepository().OperacionesNotificaciones( 2, 0, Bandera))
             {
-                @if (condicionUser)
-                {
-                    <div class="content-notif">
-                        @foreach (var notificacionUser in Model)
-                        {
-                            <div class="notif-container">
-                                <p class="notif-text">Razon: @notificacionUser.Notificaciones.Razon</p>
-                                <p class="notif-text">Fecha: @notificacionUser.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy HH:mm:ss")</p>
-                                <button class="btn-visualizar" data-notification-id="@notificacionUser.Notificaciones.Id">Visualizar</button>
-                            </div>
+                <div class="content-notif">
 
-                            @if (notificacionUser.Prestamos.Estado == "DENEGADO")
-                            {
-                                <div class="modal-principal" id="modal-@notificacionUser.Notificaciones.Id">
-                                    <div class="modal__container">
-                                        <h2 class="modal__title">Detalles</h2>
-                                        <div class="modal__content">
-                                            <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUser.Notificaciones.Razon</p>
-                                            <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUser.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
-                                            <p class="modal__paragraph"><strong>Descripcion:</strong></p>
-                                            <p class="modal__description">@notificacionUser.Notificaciones.Descripcion</p>
-                                            <div class="container-modal-btn">
-                                                <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            }
-                            else
-                            {
-                                @if (notificacionUser.Prestamos.Estado != "DENEGADO" && notificacionUser.Prestamos.Estado == "PENDIENTE REFERENTE")
-                                {
-                                    <div class="modal-principal" id="modal-@notificacionUser.Notificaciones.Id">
-                                        <div class="modal__container">
-                                            <h2 class="modal__title">Detalles</h2>
-                                            <div class="modal__content">
-                                                <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUser.Notificaciones.Razon</p>
-                                                <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUser.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
-                                                <p class="modal__paragraph"><strong>Descripcion:</strong></p>
-                                                <p class="modal__description">@notificacionUser.Notificaciones.Descripcion</p>
-                                                <div class="container-modal-btn">
-                                                    <button class="btn-mdl-aceptar" data-notification-id="@notificacionUser.Notificaciones.Id">Aceptar</button>
-                                                    <button class="btn-mdl-rechazar" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
-                                                    <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="modal-aceptar" id="modal-aceptar-@notificacionUser.Notificaciones.Id">
-                                        <div class="modal-aceptar__container">
-                                            <h2 class="modal__title">Esta seguro en Aceptar las condiciones dadas por los Administradores?</h2>
-                                            <div class="modal-aceptar__content">
-                                                <form asp-action="AceptarReferente">
-                                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                    <input type="hidden" asp-for="@notificacionUser.Prestamos.Id" name="Id" id="Id" />
-                                                    <div class="container-modal-btn">
-                                                        <button type="submit" data-notification-id="@notificacionUser.Notificaciones.Id" class="save-button">Aceptar</button>
-                                                        <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="modal-rechazar" id="modal-rechazar-@notificacionUser.Notificaciones.Id">
-                                        <div class="modal-rechazar__container">
-                                            <h2 class="modal__title">Esta Seguro en Rechazar las condiciones dadas por los Administradores?</h2>
-                                            <div class="modal-rechazar__content">
-                                                <form asp-action="RechazarReferente">
-                                                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                    <input type="hidden" asp-for="@notificacionUser.Prestamos.Id" name="Id" id="Id" />
-                                                    <div class="container-modal-btn">
-                                                        <button type="submit" class="save-button" data-notification-id="@notificacionUser.Notificaciones.Id">Rechazar</button>
-                                                        <a href="~/Notificaciones/Notificacion" class="modal-secundaria__close" data-notification-id="@notificacionUser.Notificaciones.Id">Cerrar</a>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                }
-                            }
-                        }
-                    </div>
-                }
-                else
-                {
-                    <p>Actualmente no Tienes Notificaciones.</p>
-                }
+                </div>
             }
             else
             {
-                <p>Usted no tiene permisos para esta funcion.</p>
+                <p>Actualmente no Tienes Notificaciones.</p>
             }
+        }
+        else
+        {
+            <p>Usted no tiene permisos para esta funcion.</p>
         }
     </div>
 </body>
