Objetivo 4 - Vistas (Dia de Pruebas). 1. Agregado archivo docker-compose.

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -144,21 +144,29 @@
                             {
                                 switch ((string)new ObtenerTipoNotificacion().ClasificarInformacion(notificacionUsers.Notificaciones.IdActividad))
                                 {
-                                    case "NUSE":
-                                        <div class="notif-container">
-                                            <p class="notif-text">Tipo: @notificacionUsers.Notificaciones.IdActividad: Nuevo Usuario</p>
-                                            <p class="notif-text">Razon: @notificacionUsers.Notificaciones.Razon</p>
-                                            <p class="notif-text">Fecha: @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
-                                            <button class="btn-visualizar" data-notification-id="@notificacionUsers.Notificaciones.Id">Visualizar</button>
-                                        </div>
-                                        break;
                                     case "APOR":
                                         <div class="notif-container">
-                                            <p class="notif-text">Tipo: @notificacionUsers.Notificaciones.IdActividad: Nueva Aportacion</p>
+                                            <p class="notif-text">Tipo: @notificacionUsers.Notificaciones.IdActividad: Aporte</p>
                                             <p class="notif-text">Razon: @notificacionUsers.Notificaciones.Razon</p>
                                             <p class="notif-text">Fecha: @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MMMM-yyyy")</p>
                                             <button class="btn-visualizar" data-notification-id="@notificacionUsers.Notificaciones.Id">Visualizar</button>
                                         </div>
+                                        <div class="modal-principal" id="modal-@notificacionUsers.Notificaciones.Id">
+                                            <div class="modal__container">
+                                                <h2 class="modal__title">Detalles</h2>
+                                                <div class="modal__content">
+                                                    <p class="modal__paragraph"><strong>Razon:</strong> @notificacionUsers.Notificaciones.Razon</p>
+                                                    <p class="modal__paragraph"><strong>Fecha:</strong> @notificacionUsers.Notificaciones.FechaGeneracion.ToString("dd-MM-yyyy")</p>
+                                                    <p class="modal__paragraph"><strong>Valor:</strong> @notificacionUsers.Aportaciones.Valor</p>
+                                                    <p class="modal__paragraph"><strong>Descripcion:</strong></p>
+                                                    <p class="modal__description">@notificacionUsers.Notificaciones.Descripcion</p>
+                                                    <div class="container-modal-btn">
+                                                        <a href="~/Notificaciones/Notificacion" class="modal__close" data-notification-id="@notificacionUsers.Notificaciones.Id">Cerrar</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
                                         break;
                                     case "MULT":
                                         <div class="notif-container">
