Objetivo 4 - Vistas (Dia de Pruebas). 1. Modificaciones en NotificacioneRepository. obtencion de Datos de Notificacion segun origen

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -45,7 +45,7 @@
                         {
                             if (notificacionAdmin.Notificaciones.Visto == "NO")
                             {
-                                switch ((string)new ObtenerTipoNotificacion().ClasificarInformacion(notificacionAdmin.Notificaciones.IdActividad))
+                                switch (new ObtenerTipoNotificacion().ClasificarInformacion(notificacionAdmin.Notificaciones.IdActividad))
                                 {
                                     case "NUSE":
                                         <div class="notif-container">
