--- a/act_Application/Views/TablaAportantes/Index.cshtml
+++ b/act_Application/Views/TablaAportantes/Index.cshtml
@@ -15,7 +15,7 @@
         <h1>Tabla de Aportaciones</h1>
         <hr />
         <div class="table-container">
-            @if ((bool)new AportacionRepository().OperacionesAportaciones(1, 0, 0))
+            @if ((bool)new AportacionRepository().OperacionesAportaciones(1, 0, 0, ""))
             {
                 <table class="aportacion-table">
                     <thead>
